--- a/src/templates/countriesList.hbs
+++ b/src/templates/countriesList.hbs
@@ -1,7 +1,7 @@
 <div class="countries-list">
 <ul>
 {{#each this}}
-<li class="country-name">{{this.name}}</li>
+<li class="country-name-item">{{this.name}}</li>
 {{/each}}
 </ul>
 </div>
